cluster/apps/actual-budget/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-budget
  namespace: actual-budget
spec:
  ingressClassName: traefik
  rules:
    - host: budget.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actual-budget
                port:
                  number: 5006
